<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matpag.sample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/parent_panel">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_example"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            />

        <com.matpag.clickdrawabletextview.ClickDrawableEditText
            android:id="@+id/click_drawable_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="20dp"
            app:csStartDrawable="@drawable/close_blue"
            app:csStartDrawableHeight="50dp"
            app:csStartDrawableWidth="80dp"
            app:csStartDrawableTint="@android:color/holo_orange_dark"
            app:csEndDrawable="@drawable/ic_android_black_24dp"
            app:csEndDrawableHeight="50dp"
            app:csEndDrawableWidth="50dp"
            app:csEndDrawableTint="@color/colorstatelist"
            app:csTopDrawable="@drawable/ic_android_black_24dp"
            app:csTopDrawableHeight="40dp"
            app:csTopDrawableWidth="20dp"
            app:csTopDrawableTint="@android:color/holo_green_dark"
            app:csBottomDrawable="@drawable/close_blue"
            app:csBottomDrawableHeight="30dp"
            app:csBottomDrawableWidth="30dp"
            app:csBottomDrawableTint="@android:color/holo_purple"
            android:drawablePadding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/second_example"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            />

        <com.matpag.clickdrawabletextview.ClickDrawableEditText
            android:hint="@string/second_example_hint"
            android:id="@+id/click_drawable_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:csEndDrawable="@drawable/ic_search_black_24dp"
            app:csEndDrawableHeight="30dp"
            app:csEndDrawableWidth="30dp"
            app:csEndDrawableTint="@color/primary"
            android:padding="20dp"
            android:drawablePadding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/third_example"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            />

        <com.matpag.clickdrawabletextview.ClickDrawableAutoCompleteTextView
            android:hint="@string/third_example_hint"
            android:id="@+id/click_drawable_auto_text_view"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            />

    </LinearLayout>

</ScrollView>